--- a/src/app/pages/scan/scan.page.html
+++ b/src/app/pages/scan/scan.page.html
@@ -7,7 +7,7 @@
             {{ currentVoucher?.code }}
         </ion-title>
         <ion-buttons slot="end">
-            <ion-button>
+            <ion-button routerLink="/home">
                 <ion-icon slot="icon-only" name="print"></ion-icon>
             </ion-button>
         </ion-buttons>
