--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -15,7 +15,7 @@
                     <p>R062832-0003</p>
                 </div>
                 <ion-button fill="clear" routerLink="/login">
-                    <ion-icon slot="icon-only" name="log-out" color="primary"></ion-icon>
+                    <ion-icon slot="icon-only" name="log-out" color="light"></ion-icon>
                 </ion-button>
             </div>
             <div class="scan__top__items">
@@ -23,34 +23,34 @@
                     <ion-icon src="../../../assets/icon/plastic-bottle.svg" slot="start"></ion-icon>
                     <div>
                         <h1>Plastic</h1>
-                        <p>x52</p>
+                        <p [ngStyle]="{'color': getColorForThreshold('plastic') }">{{ currentThresholdForPlastic }} <span>/ {{ maximumThresholdForPlastic }}</span></p>
                     </div>
                 </div>
                 <div class="scan__top__item">
                     <ion-icon src="../../../assets/icon/can.svg" slot="start"></ion-icon>
                     <div>
-                        <h1>Doze</h1>
-                        <p>x212</p>
+                        <h1>Aluminiu</h1>
+                        <p [ngStyle]="{'color': getColorForThreshold('can') }">{{ currentThresholdForCan }} <span>/ {{ maximumThresholdForCan }}</span></p>
                     </div>
                 </div>
                 <div class="scan__top__item">
                     <ion-icon src="../../../assets/icon/glass.svg" slot="start"></ion-icon>
                     <div>
                         <h1>Sticla</h1>
-                        <p>x30</p>
+                        <p [ngStyle]="{'color': getColorForThreshold('glass') }">{{ currentThresholdForGlass }} <span>/ {{ maximumThresholdForGlass }}</span></p>
                     </div>
                 </div>
             </div>
             <div class="home__actions">
-                <ion-button [ngClass]="{'primary': availableOption.primary }" *ngFor="let availableOption of availableOptions" [fill]="availableOption.primary ? 'outline' : 'solid'" [color]="availableOption.primary ? 'primary' : 'dark'" [routerLink]="availableOption.router !== null ? availableOption.router : null">
+                <ion-button *ngFor="let availableOption of availableOptions" fill="solid" [color]="availableOption.icon === 'pricetag' && !canScan() ? 'primary' : 'dark'" [routerLink]="availableOption.router !== null ? availableOption.router : null">
                     {{ availableOption.name }}
                     <ion-icon slot="end" [name]="availableOption.icon"></ion-icon>
                 </ion-button>
             </div>
         </div>
 
-        <ion-button class="primary" fill="solid" color="primary" routerLink="/scan">
-            Scanează
+        <ion-button class="primary" fill="solid" color="primary" routerLink="/scan" [disabled]="!canScan()">
+            Voucher
             <ion-icon slot="end" name="scan-circle"></ion-icon>
         </ion-button>
     </div>
