--- a/src/app/pages/voucher-history/voucher-history.page.scss
+++ b/src/app/pages/voucher-history/voucher-history.page.scss
@@ -11,6 +11,18 @@
 }
 
 ion-content {
+    .history__loading {
+        width: 100%;
+        height: 100%;
+        display: grid;
+        place-items: center;
+
+        ion-spinner {
+            width: 36px;
+            height: 36px;
+        }
+    }
+
     .history__content {
         width: 100%;
         height: 100%;
@@ -27,21 +39,60 @@ ion-content {
                 background: transparent;
                 padding: 0;
 
-                ion-item {
+                ion-item-sliding {
+                    ion-item {
+                        --padding-start: 10px;
 
-                    ion-label {
-
-                        h3 {
-                            font-size: 16px;
-                            font-weight: 500;
+                        &:last-child {
+                            --border-width: 0px;
                         }
 
-                        p {
-                            font-size: 14px;
-                            font-weight: 300;
+                        .history__end {
+                            display: flex;
+                            flex-direction: column;
+                            justify-content: center;
+                            align-items: center;
+
+                            ion-badge {
+                                --padding-bottom: 4px;
+                                --padding-top: 4px;
+                                --padding-start: 6px;
+                                --padding-end: 6px;
+                            }
+
+                            p {
+                                margin: 0;
+                                font-size: 16px;
+                                font-weight: 500;
+                            }
+                        }
+
+                        ion-icon {
+                            margin: 0;
+                            margin-right: 15px;
+                            color: var(--ion-color-primary);
+                            opacity: 0.5;
+                        }
+
+                        ion-label {
+                            h3 {
+                                font-size: 15px;
+                                font-weight: 500;
+                            }
+
+                            p {
+                                font-size: 13px;
+                                font-weight: 300;
+                            }
                         }
                     }
+                    ion-spinner {
+                        width: 28px;
+                        height: 28px;
+                        color: var(--ion-color-dark);
+                    }
                 }
+
             }
         }
 
