--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -6,23 +6,25 @@
         <div class="login__bottom">
 
             <ion-list [inset]="true">
-                <ion-item>
-                    <ion-input inputmode="text" label="Nume de utilizator" label-placement="stacked" type="text" required spellcheck="false" placeholder="Introdu numele de utilizator"></ion-input>
-                    <ion-icon name="person-outline" slot="end"></ion-icon>
-                </ion-item>
-                <ion-item>
-                    <ion-input label="Parolă" label-placement="stacked" type="password" required spellcheck="false" placeholder="&bull;&bull;&bull;&bull;&bull;&bull;&bull;&bull;&bull;&bull;&bull;"></ion-input>
-                    <ion-icon name="key-outline" slot="end"></ion-icon>
-                </ion-item>
-                <ion-item>
-                    <ion-toggle>
-                        <ion-label class="login__bottom__remember">Ține-mă minte</ion-label>
-                    </ion-toggle>
-                </ion-item>
-                <ion-button expand="full" (click)="login()">
-                    Autentificare
-                </ion-button>
-                <ion-text>Ai uitat parola?</ion-text>
+                <form [formGroup]="loginForm">
+                    <ion-item>
+                        <ion-input inputmode="text" label="Nume de utilizator" formControlName="username" label-placement="stacked" type="text" required spellcheck="false" placeholder="Introdu numele de utilizator"></ion-input>
+                        <ion-icon name="person-outline" slot="end"></ion-icon>
+                    </ion-item>
+                    <ion-item>
+                        <ion-input label="Parolă" label-placement="stacked" type="password" formControlName="password" required spellcheck="false" placeholder="&bull;&bull;&bull;&bull;&bull;&bull;&bull;&bull;&bull;&bull;&bull;"></ion-input>
+                        <ion-icon name="key-outline" slot="end"></ion-icon>
+                    </ion-item>
+                    <ion-item>
+                        <ion-toggle>
+                            <ion-label class="login__bottom__remember">Ține-mă minte</ion-label>
+                        </ion-toggle>
+                    </ion-item>
+                    <ion-button expand="full" (click)="login()">
+                        Autentificare
+                    </ion-button>
+                    <ion-text>Ai uitat parola?</ion-text>
+                </form>
             </ion-list>
         </div>
     </div>
