--- a/src/app/pages/scan/scan.page.scss
+++ b/src/app/pages/scan/scan.page.scss
@@ -36,7 +36,7 @@ ion-content {
 
                     ion-icon {
                         font-size: 24px;
-                        opacity: .5;
+                        opacity: 0.5;
                     }
 
                     h1 {
@@ -51,8 +51,6 @@ ion-content {
                         font-weight: 300;
                     }
                 }
-
-
             }
 
             .scan__top__calendar {
@@ -146,4 +144,66 @@ ion-content {
             }
         }
     }
+}
+
+.register__product {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    padding: 20px;
+
+    form {
+        width: 100%;
+        gap: 10px;
+        display: flex;
+        flex-direction: column;
+
+        .register__product__image {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+
+            h1 {
+                margin: 0;
+                font-size: 18px;
+                font-weight: 400;
+                letter-spacing: -0.5px;
+            }
+        }
+
+        ion-item {
+            --background: transparent;
+            --padding-start: 0px;
+            --inner-padding-end: 8px;
+        }
+
+        ion-radio-group {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            margin-top: 10px;
+
+            ion-radio {
+                font-size: 18px;
+                font-weight: 400;
+                letter-spacing: -0.5px;
+
+            }
+        }
+
+        .register__product__button {
+            min-height: 100px;
+            font-size: 36px;
+            letter-spacing: -0.4px;
+            --border-radius: 0;
+            font-weight: 500;
+            margin: 0;
+            width: 100%;
+            margin-top: 40px;
+        }
+    }
+}
+
+ion-modal {
+    --height: auto;
 }
