--- a/src/app/pages/voucher-history/voucher-history.page.scss
+++ b/src/app/pages/voucher-history/voucher-history.page.scss
@@ -97,9 +97,10 @@ ion-content {
         }
 
         .scan__add {
-            min-height: 100px;
-            font-size: 36px;
+            min-height: 80px;
+            font-size: 28px;
             letter-spacing: -0.4px;
+            text-transform: capitalize;
             --border-radius: 0;
             font-weight: 500;
             position: absolute;
