--- a/src/global.scss
+++ b/src/global.scss
@@ -55,3 +55,26 @@
         --ionicon-stroke-width: 24px;
     }
 }
+
+.no__entries {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    gap: 10px;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    opacity: .6;
+
+    ion-icon {
+        font-size: 48px;
+        --ionicon-stroke-width: 16px;
+    }
+
+    h1 {
+        margin: 0;
+        font-size: 24px;
+        font-weight: 300;
+        letter-spacing: -0.4px;
+    }
+}
