fix ble printer service to be globally

--- a/src/app/pages/voucher-history/voucher-history.page.html
+++ b/src/app/pages/voucher-history/voucher-history.page.html
@@ -50,7 +50,10 @@
             </div>
 
             <ng-template #no_vouchers>
-                NO VOUCHERS
+                <div class="no__entries">
+                    <ion-icon name="sad-outline"></ion-icon>
+                    <h1>Nu există niciun voucher în istoric</h1>
+                </div>
             </ng-template>
 
 
