--- a/src/app/pages/voucher-history/voucher-history.page.html
+++ b/src/app/pages/voucher-history/voucher-history.page.html
@@ -16,6 +16,9 @@
         </div>
     </ng-container>
     <ng-template #show_history>
+        <ion-refresher slot="fixed" (ionRefresh)="handleRefresh($event)">
+            <ion-refresher-content></ion-refresher-content>
+        </ion-refresher>
         <div class="history__content">
             <div class="history__list" *ngIf="vouchers !== null && vouchers.length > 0; else no_vouchers">
                 <ion-list>
